# candidateproject

./: README.md
CMakeLists for MAC/: CMakeLists.txt
SpaceDome/: .gitmodules  CMakeLists.txt  README.md  SpaceDome - genväg.lnk  proxyhost.py
SpaceDome/ext/libwebsockets/include/libwebsockets/: lws-tokenize.h
SpaceDome/ext/libwebsockets/lib/plat/windows/: private-lib-plat-windows.h
SpaceDome/ext/libwebsockets/lib/roles/http/server/: server.c
SpaceDome/ext/sgct/include/sgct/: engine.h
SpaceDome/ext/sgct/src/: fontmanager.cpp  networkmanager.cpp
SpaceDome/myenv/: pyvenv.cfg
SpaceDome/object/: planet1.fbx
SpaceDome/src/: AssimpLoader.cpp  AssimpLoader.h  Doxyfile  TextItem.h  backgroundObjects.cpp  backgroundObjects.h  booster.cpp  booster.h  bullets.cpp  bullets.h  exception.cpp  exception.h  game.cpp  game.h  globals.h  main.cpp  mesh.cpp  mesh.h  nodes.xml  nodes_test.xml  objectValues.h  player.cpp  player.h  shader.h  shaderManager.h  shieldBooster.cpp  shieldBooster.h  skyBox.cpp  skyBox.h  socket.cpp  socket.h  sockettype.h  speedBooster.cpp  speedBooster.h  stars.cpp  stars.h  tcpsocket.cpp  tcpsocket.h  tcpsocket.inl  tests.cpp  (+6 more)
SpaceDome/src/html/: _assimp_loader_8h_source.html  _text_item_8h_source.html  annotated.html  background_objects_8h_source.html  booster_8h_source.html  bullets_8h_source.html  class_assimp_loader-members.html  class_assimp_loader.html  class_background_object-members.html  class_background_object.html  class_booster-members.html  class_booster.html  class_bullet-members.html  class_bullet.html  class_game-members.html  class_game.html  class_mesh-members.html  class_mesh.html  class_player-members.html  class_player.html  class_shader-members.html  class_shader.html  class_shield_booster-members.html  class_shield_booster.html  class_speed_booster-members.html  class_speed_booster.html  class_star-members.html  class_star.html  class_text_renderer-members.html  class_text_renderer.html  class_utility-members.html  class_utility.html  class_web_socket_handler-members.html  class_web_socket_handler.html  classes.html  classtcpsocket_1_1io_1_1_socket-members.html  classtcpsocket_1_1io_1_1_socket.html  classtcpsocket_1_1io_1_1_tcp_socket-members.html  classtcpsocket_1_1io_1_1_tcp_socket.html  doxygen_crawl.html  (+55 more)
SpaceDome/src/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  classes_c.js  classes_d.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_9.js  searchdata.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  (+1 more)
SpaceDome/src/latex/: _assimp_loader_8h_source.tex  _text_item_8h_source.tex  annotated.tex  background_objects_8h_source.tex  booster_8h_source.tex  bullets_8h_source.tex  class_assimp_loader.tex  class_background_object.tex  class_booster.eps  class_booster.tex  class_bullet.tex  class_game.tex  class_mesh.tex  class_player.tex  class_shader.tex  class_shield_booster.eps  class_shield_booster.tex  class_speed_booster.eps  class_speed_booster.tex  class_star.tex  class_text_renderer.tex  class_utility.tex  class_web_socket_handler.tex  classtcpsocket_1_1io_1_1_socket.eps  classtcpsocket_1_1io_1_1_socket.tex  classtcpsocket_1_1io_1_1_tcp_socket.eps  classtcpsocket_1_1io_1_1_tcp_socket.tex  exception_8h_source.tex  files.tex  game_8h_source.tex  globals_8h_source.tex  hierarchy.tex  mesh_8h_source.tex  player_8h_source.tex  refman.tex  shader_8h_source.tex  shader_manager_8h_source.tex  shield_booster_8h_source.tex  socket_8h_source.tex  sockettype_8h_source.tex  (+26 more)
SpaceDome/src/models/: GreenBullet.fbx  RedBullet.fbx  SpaceShip.fbx  SpawnPlanetGreen.fbx  SpawnPlanetGreenTest.fbx  asteroid1.fbx  bullet.fbx  planet2.fbx  shieldBooster.fbx  speedBooster.fbx  star.fbx
SpaceDome/src/models/green/: GreenShip11.fbx  GreenShip12.fbx  GreenShip13.fbx  GreenShip21.fbx  GreenShip22.fbx  GreenShip23.fbx  GreenShip31.fbx  GreenShip32.fbx  GreenShip33.fbx  GreenShip41.fbx  GreenShip42.fbx  GreenShip43.fbx  GreenShip51.fbx  GreenShip52.fbx  GreenShip53.fbx  GreenShip61.fbx  GreenShip62.fbx  GreenShip63.fbx
SpaceDome/src/models/red/: RedShip11.fbx  RedShip12.fbx  RedShip13.fbx  RedShip21.fbx  RedShip22.fbx  RedShip23.fbx  RedShip31.fbx  RedShip32.fbx  RedShip33.fbx  RedShip41.fbx  RedShip42.fbx  RedShip43.fbx  RedShip51.fbx  RedShip52.fbx  RedShip53.fbx  RedShip61.fbx  RedShip62.fbx  RedShip63.fbx
SpaceDome/src/shaders/: basic_fragment.glsl  basic_vertex.glsl
SpaceDome/webserver/: package-lock.json  server.js
SpaceDome/webserver/public/: index.html  script.js
sgct-game/: .gitignore  .gitmodules  LICENSE
sgct-game/src/: main.cpp  websockethandler.cpp
sgct-game/webserver/: package.json
sgct-master/: CMakeLists.txt
website/: app.json  package-lock.json  package.json
website/android/: settings.gradle
website/android/app/: build.gradle
website/android/app/src/main/java/com/website/: MainActivity.kt  MainApplication.kt
website/android/app/src/main/res/values/: strings.xml
website/ios/: Podfile
website/ios/website.xcodeproj/: project.pbxproj
website/ios/website.xcodeproj/xcshareddata/xcschemes/: website.xcscheme
website/public/: index.html
website/src/: App.css  App.js  Controller.css  Controller.js  index.js
